--- a/css/style.css
+++ b/css/style.css
@@ -4,48 +4,61 @@ body{
     margin-right: 20px;
 }
 
-#skipdiet{
-    display: flex;
-    color:#555b57;
-   
-}
-.skipdiet-half{
-    width: 50%;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
- a {
-background-image: linear-gradient(orange,salmon);
-color: white;
-padding: 15px;
-border-radius: 25px;
-text-decoration: none;
-}
-.skipdiet-half img{
-    height: 80%;
-    position:center;
-}
 h1{
     font-size: 40px;
+    font-weight: 700;
+    line-height:18px;
    
+}
+h2{
+    color:#555b57;
 }
 span{
     color:orangered;
 }
-#aboutme{
+.button a {
+    background-image: linear-gradient(orange,salmon);
+    color: white;
+    padding: 15px;
+    border-radius: 25px;
+    text-decoration: none;
+    
+    }
+/* Start-lower-header */
+#skipdiet{
     display: flex;
     color:#555b57;
+    margin-top: 50px;
+   
+}
+.skipdiet-half{
+    width: 50%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+
+.skipdiet-half img{
+    height: 80%;
+    position:center;
+}
+/* End-lower_header */
+
+
+/* Start-about-me */
+#aboutme{
+    display: flex;
     background-image: url(/images/shapes/7.png);
     background-repeat: no-repeat
    
 }
 .aboutme-half{
     width: 50%;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 4%;
+    padding-right: 4%;
 }
 .aboutme-half img{
     height: 35%;
-    
+  margin-top:25px;
 }
+/* End-about-me */
