--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1{
     margin-top:50px;
    
 }
-h2{
+.half h2{
     color:#555b57;
     margin-top: 100px;
 }
@@ -108,12 +108,14 @@ margin-top:25px;
 }
 
 .footer{
-    color: white;
+    color:#555b57;
     background-color:black;
     height: 200px;
     text-align: center;
     
 }
-
+.footer h2{
+    padding-top:50px;
+}
 
 
