--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,53 @@ body{
     margin-left: 20px;
     margin-right: 20px;
 }
+/* <!-- nav-bar start --> */
 
+.nav-elements h1{
+    font-size: 25px;
+    color: #555b57;
+    
+}
+.nav-elements span{
+    color: orangered;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2% 6%;
+}
+nav img {
+    width: 150px;
+}
+.nav-links{
+    flex: 1;
+    text-align: right;
+}
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+.nav-links ul li a{
+    color: #555b57;
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: 500;
+}
+.nav-links ul li::after{
+    content: '';
+    width: 0px;
+    height: 2px;
+    background-color: #f44336;
+    display: block;
+    margin: auto;
+    transition: .5s;
+}
+.nav-links ul li:hover::after{
+    width: 100%;
+}
 h1{
     font-size: 40px;
     font-weight: 700;
@@ -40,8 +86,6 @@ span{
 #skipdiet{
     display: flex;
     color:#555b57;
-    margin-top: 50px;
-   
 }
 .half{
     width: 50%;
@@ -49,8 +93,6 @@ span{
     padding-left: 4%;
     padding-right: 4%;
 }
-
-
 #aboutme{
     display: flex;
     background-image: url(/images/shapes/7.png);
@@ -106,16 +148,54 @@ margin-top:25px;
    margin-left: 55px; 
   
 }
-
+.contact{
+    height:600px;
+    width:100%;
+    background-image: url(/images/food/4.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-top:30px;
+}
+.contact-child{
+    width: 280px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    color: white;
+    margin-left:300px;
+    margin-top:300px;
+}
+.form-elements{
+    padding: 8px 0px;
+    margin: 8px 0px;
+    border-bottom: 1px solid orangered;
+}
+.contact-child input{
+    padding: 8px 53px;
+}
+.contact-child h1{
+    color: white;
+    font-size: 40px;
+    
+}
+.contact-child .btn {
+    margin-top: 30px;
+    border-radius: 10px;
+    font-size:20px;
+    font-weight:600;
+    color: orangered;
+}
 .footer{
     color:#555b57;
     background-color:black;
-    height: 200px;
+    height: 150px;
     text-align: center;
-    
+    margin-top:-20px;
 }
 .footer h2{
-    padding-top:50px;
+    padding-top:30px;
 }
+
+
 
 
